Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24978

SIGABRT in __libc_message

    XMLWordPrintable

Details

    Description

      SET @value=REPEAT (1,5001);
      CREATE TABLE t (a VARCHAR(5000),FULLTEXT (a));
      INSERT IGNORE INTO t VALUES(@value);
      

      10.6.0 74281fe1fb0faf444aec3744b90995156f9f58f9 (Optimized)

      Core was generated by `/test/GAL_MD240221-mariadb-10.6.0-linux-x86_64-opt/bin/mysqld --defaults-file=/'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14ab8404d700 (LWP 2445077))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x000055bb420f767f in my_write_core (sig=sig@entry=6) at /test/10.6_opt/mysys/stacktrace.c:424
      #2  0x000055bb41b69510 in handle_fatal_signal (sig=6) at /test/10.6_opt/sql/signal_handler.cc:331
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014ab97e5b859 in __GI_abort () at abort.c:79
      #6  0x000014ab97ec63ee in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x14ab97ff007c "*** %s ***: terminated\n") at ../sysdeps/posix/libc_fatal.c:155
      #7  0x000014ab97f68b4a in __GI___fortify_fail (msg=msg@entry=0x14ab97ff0012 "buffer overflow detected") at fortify_fail.c:26
      #8  0x000014ab97f673e6 in __GI___chk_fail () at chk_fail.c:28
      #9  0x000055bb41e84626 in memcpy (__len=<optimized out>, __src=<optimized out>, __dest=0x14ab840490a0) at /usr/include/x86_64-linux-gnu/bits/string_fortified.h:34
      #10 wsrep_store_key_val_for_row (thd=<optimized out>, table=<optimized out>, keynr=<optimized out>, buff=<optimized out>, record=<optimized out>, key_is_null=<optimized out>, buff_len=3500) at /test/10.6_opt/storage/innobase/handler/ha_innodb.cc:6379
      #11 0x000055bb41e8ffcb in ha_innobase::wsrep_append_keys (this=0x14ab24023d30, thd=0x14ab24000c58, key_type=WSREP_SERVICE_KEY_EXCLUSIVE, record0=0x14ab24093bf0 "\376\210\023", '\061' <repeats 197 times>..., record1=0x0) at /test/10.6_opt/storage/innobase/handler/ha_innodb.cc:9789
      #12 0x000055bb41e9acc9 in ha_innobase::write_row (this=0x14ab24023d30, record=0x14ab24093bf0 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.6_opt/storage/innobase/handler/ha_innodb.cc:7534
      #13 0x000055bb41b78358 in handler::ha_write_row (this=0x14ab24023d30, buf=0x14ab24093bf0 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.6_opt/sql/handler.cc:7153
      #14 0x000055bb4191dc8d in write_record (thd=thd@entry=0x14ab24000c58, table=table@entry=0x55bb44bf28d8, info=info@entry=0x14ab8404bb80, sink=sink@entry=0x0) at /test/10.6_opt/sql/sql_insert.cc:2106
      #15 0x000055bb41924767 in mysql_insert (thd=thd@entry=0x14ab24000c58, table_list=<optimized out>, fields=@0x14ab24005b10: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bb42a57f50 <end_of_list>, last = 0x14ab24005b10, elements = 0}, <No data fields>}, values_list=@0x14ab24005b58: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x14ab240111c8, last = 0x14ab240111c8, elements = 1}, <No data fields>}, update_fields=@0x14ab24005b40: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bb42a57f50 <end_of_list>, last = 0x14ab24005b40, elements = 0}, <No data fields>}, update_values=@0x14ab24005b28: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x55bb42a57f50 <end_of_list>, last = 0x14ab24005b28, elements = 0}, <No data fields>}, duplic=<optimized out>, ignore=<optimized out>, result=<optimized out>) at /test/10.6_opt/sql/sql_insert.cc:1099
      #16 0x000055bb4195dc92 in mysql_execute_command (thd=0x14ab24000c58) at /test/10.6_opt/sql/sql_parse.cc:4519
      #17 0x000055bb4194d83f in mysql_parse (thd=thd@entry=0x14ab24000c58, rawbuf=rawbuf@entry=0x14ab24010470 "INSERT IGNORE INTO t VALUES(@value)", length=length@entry=35, parser_state=parser_state@entry=0x14ab8404c400) at /test/10.6_opt/sql/sql_parse.cc:7972
      #18 0x000055bb4194d2b6 in wsrep_mysql_parse (thd=0x14ab24000c58, rawbuf=0x14ab24010470 "INSERT IGNORE INTO t VALUES(@value)", length=35, parser_state=0x14ab8404c400) at /test/10.6_opt/sql/sql_parse.cc:7786
      #19 0x000055bb4195a6ee in dispatch_command (command=COM_QUERY, thd=0x14ab24000c58, packet=0x14ab240080d9 "INSERT IGNORE INTO t VALUES(@value)", packet_length=<optimized out>, blocking=<optimized out>) at /test/10.6_opt/sql/sql_class.h:1295
      #20 0x000055bb4195b136 in do_command (thd=0x14ab24000c58, blocking=blocking@entry=true) at /test/10.6_opt/sql/sql_parse.cc:1397
      #21 0x000055bb41a611dd in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55bb44c374f8, put_in_cache=put_in_cache@entry=true) at /test/10.6_opt/sql/sql_connect.cc:1410
      #22 0x000055bb41a6168d in handle_one_connection (arg=arg@entry=0x55bb44c374f8) at /test/10.6_opt/sql/sql_connect.cc:1312
      #23 0x000055bb41de8846 in pfs_spawn_thread (arg=0x55bb44c4ac68) at /test/10.6_opt/storage/perfschema/pfs.cc:2201
      #24 0x000014ab98369609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #25 0x000014ab97f58293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.5.10 85bec9d691bb69ed20beb565b03d5585b94624fe (Optimized)

      Core was generated by `/test/GAL_MD240221-mariadb-10.5.10-linux-x86_64-opt/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14ad28e25700 (LWP 2428490))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000561c09c472ef in my_write_core (sig=sig@entry=6) at /test/10.5_opt/mysys/stacktrace.c:424
      #2  0x0000561c09672b80 in handle_fatal_signal (sig=6) at /test/10.5_opt/sql/signal_handler.cc:330
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014ad3b208859 in __GI_abort () at abort.c:79
      #6  0x000014ad3b2733ee in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x14ad3b39d07c "*** %s ***: terminated\n") at ../sysdeps/posix/libc_fatal.c:155
      #7  0x000014ad3b315b4a in __GI___fortify_fail (msg=msg@entry=0x14ad3b39d012 "buffer overflow detected") at fortify_fail.c:26
      #8  0x000014ad3b3143e6 in __GI___chk_fail () at chk_fail.c:28
      #9  0x0000561c0998ea46 in memcpy (__len=<optimized out>, __src=<optimized out>, __dest=0x14ad28e21060) at /usr/include/x86_64-linux-gnu/bits/string_fortified.h:34
      #10 wsrep_store_key_val_for_row (thd=<optimized out>, table=<optimized out>, keynr=<optimized out>, buff=<optimized out>, record=<optimized out>, key_is_null=<optimized out>, buff_len=3500) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:6573
      #11 0x0000561c0999b7bb in ha_innobase::wsrep_append_keys (this=0x14acc4023c80, thd=0x14acc4000c58, key_type=WSREP_SERVICE_KEY_EXCLUSIVE, record0=0x14acc4042800 "\376\210\023", '\061' <repeats 197 times>..., record1=0x0) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:9973
      #12 0x0000561c099a7244 in ha_innobase::write_row (this=0x14acc4023c80, record=0x14acc4042800 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.5_opt/storage/innobase/handler/ha_innodb.cc:7712
      #13 0x0000561c096819c8 in handler::ha_write_row (this=0x14acc4023c80, buf=0x14acc4042800 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.5_opt/sql/handler.cc:7153
      #14 0x0000561c0942737d in write_record (thd=thd@entry=0x14acc4000c58, table=table@entry=0x561c0d4579a8, info=info@entry=0x14ad28e23b40, sink=sink@entry=0x0) at /test/10.5_opt/sql/sql_insert.cc:2106
      #15 0x0000561c0942ddd7 in mysql_insert (thd=thd@entry=0x14acc4000c58, table_list=<optimized out>, fields=@0x14acc4005ae8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561c0a5ade30 <end_of_list>, last = 0x14acc4005ae8, elements = 0}, <No data fields>}, values_list=@0x14acc4005b30: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x14acc4011118, last = 0x14acc4011118, elements = 1}, <No data fields>}, update_fields=@0x14acc4005b18: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561c0a5ade30 <end_of_list>, last = 0x14acc4005b18, elements = 0}, <No data fields>}, update_values=@0x14acc4005b00: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561c0a5ade30 <end_of_list>, last = 0x14acc4005b00, elements = 0}, <No data fields>}, duplic=<optimized out>, ignore=<optimized out>, result=<optimized out>) at /test/10.5_opt/sql/sql_insert.cc:1099
      #16 0x0000561c09467992 in mysql_execute_command (thd=0x14acc4000c58) at /test/10.5_opt/sql/sql_parse.cc:4597
      #17 0x0000561c09456f0f in mysql_parse (thd=thd@entry=0x14acc4000c58, rawbuf=rawbuf@entry=0x14acc40103c0 "INSERT IGNORE INTO t VALUES(@value)", length=length@entry=35, parser_state=parser_state@entry=0x14ad28e24400, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_opt/sql/sql_parse.cc:8063
      #18 0x0000561c0945694c in wsrep_mysql_parse (thd=0x14acc4000c58, rawbuf=0x14acc40103c0 "INSERT IGNORE INTO t VALUES(@value)", length=35, parser_state=0x14ad28e24400, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.5_opt/sql/sql_parse.cc:7866
      #19 0x0000561c09464607 in dispatch_command (command=COM_QUERY, thd=0x14acc4000c58, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.5_opt/sql/sql_class.h:1257
      #20 0x0000561c09464ea7 in do_command (thd=0x14acc4000c58) at /test/10.5_opt/sql/sql_parse.cc:1370
      #21 0x0000561c0956a781 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x561c0d47f6e8, put_in_cache=put_in_cache@entry=true) at /test/10.5_opt/sql/sql_connect.cc:1410
      #22 0x0000561c0956abfd in handle_one_connection (arg=arg@entry=0x561c0d47f6e8) at /test/10.5_opt/sql/sql_connect.cc:1312
      #23 0x0000561c098f34b6 in pfs_spawn_thread (arg=0x561c0d4aa6b8) at /test/10.5_opt/storage/perfschema/pfs.cc:2201
      #24 0x000014ad3b716609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #25 0x000014ad3b305293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.4.19 245d33db4e0586df4fe28362fb002cef0151a1c9 (Optimized)

      Core was generated by `/test/GAL_MD240221-mariadb-10.4.19-linux-x86_64-opt/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14e32007d700 (LWP 2442764))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x00005584be7f720f in my_write_core (sig=sig@entry=6) at /test/10.4_opt/mysys/stacktrace.c:386
      #2  0x00005584be203df8 in handle_fatal_signal (sig=6) at /test/10.4_opt/sql/signal_handler.cc:344
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014e323e86859 in __GI_abort () at abort.c:79
      #6  0x000014e323ef13ee in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x14e32401b07c "*** %s ***: terminated\n") at ../sysdeps/posix/libc_fatal.c:155
      #7  0x000014e323f93b4a in __GI___fortify_fail (msg=msg@entry=0x14e32401b012 "buffer overflow detected") at fortify_fail.c:26
      #8  0x000014e323f923e6 in __GI___chk_fail () at chk_fail.c:28
      #9  0x00005584be3c9234 in memcpy (__len=<optimized out>, __src=<optimized out>, __dest=0x14e320077df0) at /usr/include/x86_64-linux-gnu/bits/string_fortified.h:34
      #10 wsrep_store_key_val_for_row (thd=0x14e29c000c48, table=0x14e29c0235a8, keynr=<optimized out>, buff=<optimized out>, buff_len=3500, record=0x14e29c040340 "\376\210\023", '\061' <repeats 197 times>..., key_is_null=0x14e320078aa0) at /test/10.4_opt/storage/innobase/handler/ha_innodb.cc:7007
      #11 0x00005584be3ca3d6 in ha_innobase::wsrep_append_keys (this=0x14e29c020ad0, thd=0x14e29c000c48, key_type=WSREP_SERVICE_KEY_EXCLUSIVE, record0=0x14e29c040340 "\376\210\023", '\061' <repeats 197 times>..., record1=0x0) at /test/10.4_opt/storage/innobase/handler/ha_innodb.cc:10471
      #12 0x00005584be3d60d8 in ha_innobase::write_row (this=0x14e29c020ad0, record=0x14e29c040340 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.4_opt/storage/innobase/handler/ha_innodb.cc:8151
      #13 0x00005584be211aba in handler::ha_write_row (this=0x14e29c020ad0, buf=0x14e29c040340 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.4_opt/sql/handler.cc:6755
      #14 0x00005584bdfa6bdd in write_record (thd=thd@entry=0x14e29c000c48, table=table@entry=0x14e29c0235a8, info=info@entry=0x14e32007a8c0) at /test/10.4_opt/sql/sql_insert.cc:2060
      #15 0x00005584bdfb17d1 in mysql_insert (thd=thd@entry=0x14e29c000c48, table_list=<optimized out>, fields=@0x14e29c005868: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5584bf0603f0 <end_of_list>, last = 0x14e29c005868, elements = 0}, <No data fields>}, values_list=@0x14e29c0058b0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x14e29c010d08, last = 0x14e29c010d08, elements = 1}, <No data fields>}, update_fields=@0x14e29c005898: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5584bf0603f0 <end_of_list>, last = 0x14e29c005898, elements = 0}, <No data fields>}, update_values=@0x14e29c005880: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5584bf0603f0 <end_of_list>, last = 0x14e29c005880, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=true) at /test/10.4_opt/sql/sql_insert.cc:1078
      #16 0x00005584bdfe2006 in mysql_execute_command (thd=0x14e29c000c48) at /test/10.4_opt/sql/sql_parse.cc:4572
      #17 0x00005584bdfe4853 in mysql_parse (thd=thd@entry=0x14e29c000c48, rawbuf=rawbuf@entry=0x14e29c00ffc0 "INSERT IGNORE INTO t VALUES(@value)", length=length@entry=35, parser_state=parser_state@entry=0x14e32007c4c0, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.4_opt/sql/sql_parse.cc:7959
      #18 0x00005584bdfe51f8 in wsrep_mysql_parse (thd=0x14e29c000c48, rawbuf=0x14e29c00ffc0 "INSERT IGNORE INTO t VALUES(@value)", length=35, parser_state=0x14e32007c4c0, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.4_opt/sql/sql_parse.cc:7763
      #19 0x00005584bdfe89b8 in dispatch_command (command=COM_QUERY, thd=0x14e29c000c48, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.4_opt/sql/sql_class.h:1170
      #20 0x00005584bdfe901a in do_command (thd=0x14e29c000c48) at /test/10.4_opt/sql/sql_parse.cc:1373
      #21 0x00005584be0dc3fe in do_handle_one_connection (connect=connect@entry=0x5584c1f4e238) at /test/10.4_opt/sql/sql_connect.cc:1412
      #22 0x00005584be0dc51f in handle_one_connection (arg=0x5584c1f4e238) at /test/10.4_opt/sql/sql_connect.cc:1316
      #23 0x000014e324443609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #24 0x000014e323f83293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.3.29 69bf55ffb6c38f802bf6ed4d9f97c90225835eab (Optimized)

      Core was generated by `/test/GAL_MD240221-mariadb-10.3.29-linux-x86_64-opt/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x14d67014d700 (LWP 2431243))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x00005649d6b51aff in my_write_core (sig=sig@entry=6) at /test/10.3_opt/mysys/stacktrace.c:386
      #2  0x00005649d65ed758 in handle_fatal_signal (sig=6) at /test/10.3_opt/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014d6af920859 in __GI_abort () at abort.c:79
      #6  0x000014d6af98b3ee in __libc_message (action=action@entry=do_abort, fmt=fmt@entry=0x14d6afab507c "*** %s ***: terminated\n") at ../sysdeps/posix/libc_fatal.c:155
      #7  0x000014d6afa2db4a in __GI___fortify_fail (msg=msg@entry=0x14d6afab5012 "buffer overflow detected") at fortify_fail.c:26
      #8  0x000014d6afa2c3e6 in __GI___chk_fail () at chk_fail.c:28
      #9  0x00005649d67924f4 in memcpy (__len=<optimized out>, __src=<optimized out>, __dest=0x14d670147f70) at /usr/include/x86_64-linux-gnu/bits/string_fortified.h:34
      #10 wsrep_store_key_val_for_row (thd=0x14d628000c48, table=0x14d628024038, keynr=<optimized out>, buff=<optimized out>, buff_len=3500, record=0x14d628041100 "\376\210\023", '\061' <repeats 197 times>..., key_is_null=0x14d670148c28) at /test/10.3_opt/storage/innobase/handler/ha_innodb.cc:7011
      #11 0x00005649d67935fb in ha_innobase::wsrep_append_keys (this=0x14d628024c10, thd=0x14d628000c48, key_type=WSREP_KEY_EXCLUSIVE, record0=0x14d628041100 "\376\210\023", '\061' <repeats 197 times>..., record1=0x0) at /test/10.3_opt/storage/innobase/handler/ha_innodb.cc:10485
      #12 0x00005649d67a0994 in ha_innobase::write_row (this=0x14d628024c10, record=0x14d628041100 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.3_opt/storage/innobase/handler/ha_innodb.cc:8169
      #13 0x00005649d65f98d1 in handler::ha_write_row (this=0x14d628024c10, buf=0x14d628041100 "\376\210\023", '\061' <repeats 197 times>...) at /test/10.3_opt/sql/handler.cc:6476
      #14 0x00005649d63c1c9d in write_record (thd=thd@entry=0x14d628000c48, table=table@entry=0x14d628024038, info=info@entry=0x14d67014aa50) at /test/10.3_opt/sql/sql_insert.cc:2038
      #15 0x00005649d63cc678 in mysql_insert (thd=thd@entry=0x14d628000c48, table_list=<optimized out>, fields=@0x14d6280056f8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5649d7316b80 <end_of_list>, last = 0x14d6280056f8, elements = 0}, <No data fields>}, values_list=@0x14d628005740: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x14d62800fec8, last = 0x14d62800fec8, elements = 1}, <No data fields>}, update_fields=@0x14d628005728: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5649d7316b80 <end_of_list>, last = 0x14d628005728, elements = 0}, <No data fields>}, update_values=@0x14d628005710: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5649d7316b80 <end_of_list>, last = 0x14d628005710, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=true) at /test/10.3_opt/sql/sql_insert.cc:1072
      #16 0x00005649d63f3af6 in mysql_execute_command (thd=0x14d628000c48) at /test/10.3_opt/sql/sql_parse.cc:4482
      #17 0x00005649d63fabc3 in mysql_parse (thd=thd@entry=0x14d628000c48, rawbuf=rawbuf@entry=0x14d62800f650 "INSERT IGNORE INTO t VALUES(@value)", length=length@entry=35, parser_state=parser_state@entry=0x14d67014c540, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.3_opt/sql/sql_parse.cc:7841
      #18 0x00005649d63fb66a in wsrep_mysql_parse (thd=0x14d628000c48, rawbuf=0x14d62800f650 "INSERT IGNORE INTO t VALUES(@value)", length=35, parser_state=0x14d67014c540, is_com_multi=false, is_next_command=false) at /test/10.3_opt/sql/sql_parse.cc:7633
      #19 0x00005649d63fd331 in dispatch_command (command=COM_QUERY, thd=0x14d628000c48, packet=<optimized out>, packet_length=<optimized out>, is_com_multi=<optimized out>, is_next_command=<optimized out>) at /test/10.3_opt/sql/sql_parse.cc:1938
      #20 0x00005649d63fef7d in do_command (thd=0x14d628000c48) at /test/10.3_opt/sql/sql_parse.cc:1398
      #21 0x00005649d64e6986 in do_handle_one_connection (connect=connect@entry=0x5649d94f7478) at /test/10.3_opt/sql/sql_connect.cc:1403
      #22 0x00005649d64e6b5f in handle_one_connection (arg=0x5649d94f7478) at /test/10.3_opt/sql/sql_connect.cc:1308
      #23 0x000014d6afe26609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #24 0x000014d6afa1d293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Attachments

        Issue Links

          Activity

            People

              seppo Seppo Jaakola
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.